feat: select perpetual construction authoritatively
