# authoritative-server/src/api/openapi.rs
@@ -22,6 +22,7 @@ use super::*;
         end_turn,
         move_unit,
         queue_construction,
+        set_perpetual_construction,
         remove_construction,
         move_construction,
         purchase_construction,
@@ -44,6 +45,7 @@ use super::*;
         JoinGameRequest,
         MoveUnitRequest,
         QueueConstructionRequest,
+        SetPerpetualConstructionRequest,
         RemoveConstructionRequest,
         MoveConstructionRequest,
         PurchaseConstructionRequest,
@@ -102,6 +104,7 @@ pub(super) async fn capabilities() -> Json<CapabilitiesResponse> {
             "join_game",
             "move_unit",
             "queue_construction",
+            "set_perpetual_construction",
             "remove_construction",
             "move_construction",
             "purchase_construction",
